fix gaps in signup

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -90,7 +90,7 @@
 
 /* sign up page */
 #signupPage {
-  margin-top: -15px;
+  margin-top: 0px;
 }
 
 #signupLeft {
@@ -102,7 +102,7 @@
 
 #signupBorder {
   margin-top: 25px;
-  margin-lefT: 200px;
+  margin-left: 200px;
   border-radius: 20px;
   border: 2px solid black;
   opacity: .25;
@@ -111,7 +111,7 @@
 }
 
 #signupRight {
-  float: right;
+  float: left;
   height: 100vh;
   width: 600px;
 }
